@@ -180,7 +180,8 @@
             <h3>Identification</h3>
             <div class="wrapper" >
               <div tal:define="codes context/getCodes; 
-                duplicate_codes context/get_duplicated_codes;">
+                duplicate_codes context/get_duplicated_codes;
+                diff_codes context/get_diff_vers_setcode">
 
                 <div class="required-field"></div>
                 <a name="rfs_codes" />
@@ -188,23 +189,7 @@
                   <span metal:use-macro="context/indicators_macros/macros/tooltip" />
                   Indicator code
                 </h4>
-                <div tal:condition="duplicate_codes" class="portalMessage warningMessage">
-                  The following codes are duplicated in the IMS: 
-                  <div tal:repeat="code duplicate_codes">
-                    <span tal:content="python:code[0]">CSI ZZZ</span> is also found in: <br/>
-                    <tal:rep tal:repeat="brain python:code[1]">
-                      <a href='' tal:attributes="href python:brain.getURL()" tal:content="python:brain.Title" />
-                      <form method="POST" action="./@@assign_version" style="display:inline">
-                        <input type="hidden" name="new-version" value="" tal:attributes="value brain/getVersionId" />
-                        <input type="hidden" name="nextURL" 
-                          tal:attributes="value string:${context/absolute_url}/@@edit_aggregated"/>
-                        <input type="submit" name="submit" value="Make them versions of each other" />
-                      </form> 
-                      <br />
-                    </tal:rep>
-                  </div>
-                  Either connect as version, or change the code with the Edit button.
-                </div>
+
                 <tal:def tal:define="fieldname string:codes; fieldset string:Classification">
                   <metal:macro metal:use-macro="here/indicators_macros/macros/active_field">
                     <metal:slot metal:fill-slot="content">
@@ -216,6 +201,99 @@
                       <div tal:repeat="code codes" tal:content="string:${code/set} ${code/code}">
                         CSI 001
                       </div>
+                      <div tal:condition="duplicate_codes" class="portalMessage warningMessage">
+                        Unrelated Indicators Specifications have the same codes.
+                      </div>
+                      
+                      <p>
+                        In case you have specified the wrong code for the current Indicator, use the "Edit" button
+                        to change it. If you believe the following indicators should be related to each other, use the 
+                        "Apply fix" button on each one to connect them as versions.
+                      </p>
+                      <table tal:repeat="code duplicate_codes">
+                        <thead>
+                          <tr>
+                            <th tal:content="python:'Duplicated code: %s' % code[0] ">
+                              CSI ZZZ
+                            </th>
+                            <th>Solution</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr tal:repeat="brain python:code[1]">
+                            <td>
+                              <a href='' tal:attributes="href python:brain.getURL()" tal:content="python:brain.Title" />
+                            </td>
+                            <td>
+                              <form method="POST" action="./@@assign_version" style="display:inline">
+                                <input type="hidden" name="new-version" value="" tal:attributes="value brain/getVersionId" />
+                                <input type="hidden" name="nextURL" 
+                                  tal:attributes="value string:${context/absolute_url}/@@edit_aggregated"/>
+                                <input type="submit" name="submit" value="Apply fix" />
+                              </form>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      
+
+                      <div tal:condition="diff_codes" class="portalMessage warningMessage">
+                        The main code for this Indicator Specification is not consistent with the rest of the related Indicators.
+                      </div>
+
+                      <div tal:condition="diff_codes" class="generic_ajax_forms">
+                        The following Indicator Specifications belong to the same versioning group but have a different main code. There are
+                        two ways of fixing this: either assign all the codes of this current specification, or assign just the maincode of this
+                        specification.
+                        <table>
+                          <thead>
+                            <tr>
+                              <th>Indicator</th>
+                              <th>Solution I</th>
+                              <th>Solution II</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr tal:repeat="spec diff_codes">
+                              <td>
+                                <a href="" tal:attributes="href spec/absolute_url" tal:content="spec/Title">Spec</a>.
+                              </td>
+                              <td>
+                                <form method="POST" action="./@@set_codes" style="display:inline"
+                                  tal:attributes="action string:${spec/absolute_url}/@@set_codes" >
+                                  <p>The codes will be changed from 
+                                    <strong tal:content="python:context.format_codes(spec.getCodes())" /> to 
+                                    <strong tal:content="python:context.format_codes(context.getCodes())" />.
+                                  </p>
+                                  <tal:rep tal:repeat="code context/getCodes">
+                                    <input name="codes:list" tal:attributes="value python:code['set']" type="hidden" />
+                                    <input name="codes:list" tal:attributes="value python:code['code']" type="hidden" />
+                                  </tal:rep>
+                                  <input type="submit" name="submit" value="Apply fix" />
+                                </form>
+                              </td>
+                              <td>
+                                <form method="POST" action="./@@set_Codes" style="display:inline"
+                                  tal:attributes="action string:${spec/absolute_url}/@@set_codes"
+                                  tal:define="candidates python: context.getCandidateFixedCode(spec)">
+                                  <p>
+                                    The codes will be changed from 
+                                    <strong tal:content="python:context.format_codes(spec.getCodes())" /> to 
+                                    <strong tal:content="python:context.format_codes(candidates)" />.
+                                  </p>
+                                  <tal:rep tal:repeat="code candidates">
+                                    <input name="codes:list" tal:attributes="value python:code['set']" type="hidden" />
+                                    <input name="codes:list" tal:attributes="value python:code['code']" type="hidden" />
+                                  </tal:rep>
+                                  <input type="submit" name="submit" value="Apply fix" />
+                                </form>
+
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+
                     </metal:slot>
                     <metal:slot metal:fill-slot="extra-metadata">
                       <div class="width">800</div>
